--- a/AT_T_triplet_generator.ipynb
+++ b/AT_T_triplet_generator.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "class AT_T_TripletGenerator(Dataset):    \n",
-    "    def __init__(self, dat_folder,train = True, transform = None):   \n",
+    "    def __init__(self, dat_folder,train = True, transform = None,not_hold_out=True):   \n",
     "        super(AT_T_TripletGenerator, self).__init__()\n",
     "        self.root_dir = os.path.dirname(dat_folder) \n",
     "        self.transform = transform\n",
@@ -41,8 +41,12 @@
     "        self.ind = [individual for individual in os.listdir(self.root_dir) if os.path.isdir(os.path.join(self.root_dir,individual))]\n",
     "        print(\"number of individuals {}\".format(len(self.ind)))\n",
     "        \n",
-    "        csv_file_train = os.path.join(self.root_dir, \"data_verification_Train.csv\")\n",
-    "        csv_file_test = os.path.join(self.root_dir, \"data_verification_Test.csv\")\n",
+    "        if not_hold_out:\n",
+    "            csv_file_train = os.path.join(self.root_dir, \"data_verification_Train.csv\")\n",
+    "            csv_file_test = os.path.join(self.root_dir, \"data_verification_Test.csv\")\n",
+    "        else:\n",
+    "            csv_file_train = os.path.join(self.root_dir, \"data_verification_Train_hold_out.csv\")\n",
+    "            csv_file_test = os.path.join(self.root_dir, \"data_verification_Test_hold_out.csv\")            \n",
     "            \n",
     "        if not \"data_verification_Train.csv\" in os.listdir(self.root_dir) or not \"data_verification_Test.csv\" in os.listdir(self.root_dir):\n",
     "        \n",
@@ -84,7 +88,14 @@
     "                            \n",
     "                            if verbose: print(\"positive filename {}\".format(positive_filename))\n",
     "                            if verbose: print(\"negative filename {}\".format(negative_filename))\n",
-    "                            if j < (len(name_images)-1)*0.8:\n",
+    "                            if not_hold_out: \n",
+    "                                split_iter = j\n",
+    "                                split_enum = len(name_images)-1\n",
+    "                            else: \n",
+    "                                split_iter = i\n",
+    "                                split_enum = len(self.ind)-1\n",
+    "                                \n",
+    "                            if split_iter < (split_enum*0.8):\n",
     "                                line = [anchor_filename,positive_filename,negative_filename]\n",
     "                                train_line_list.append([line])\n",
     "                            else:\n",
