--- a/AT_T_triplet_generator.ipynb
+++ b/AT_T_triplet_generator.ipynb
@@ -22,7 +22,7 @@
     "from torchvision import datasets, transforms\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
-    "verbose = False"
+    "verbose = False\n"
    ]
   },
   {
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "class AT_T_TripletGenerator(Dataset):    \n",
-    "    def __init__(self, dat_folder,train = True, transform = None,not_hold_out=True):   \n",
+    "    def __init__(self, dat_folder,train = True, transform = None,not_hold_out=True,hold_out_positive = False):   \n",
     "        super(AT_T_TripletGenerator, self).__init__()\n",
     "        self.root_dir = os.path.dirname(dat_folder) \n",
     "        self.transform = transform\n",
@@ -46,9 +46,13 @@
     "            csv_file_test = os.path.join(self.root_dir, \"data_verification_Test.csv\")\n",
     "        else:\n",
     "            csv_file_train = os.path.join(self.root_dir, \"data_verification_Train_hold_out.csv\")\n",
-    "            csv_file_test = os.path.join(self.root_dir, \"data_verification_Test_hold_out.csv\")            \n",
+    "            csv_file_test = os.path.join(self.root_dir, \"data_verification_Test_hold_out.csv\")    \n",
+    "        if hold_out_positive:\n",
+    "            csv_file_train = os.path.join(self.root_dir, \"data_verification_Train_hop.csv\")\n",
+    "            csv_file_test = os.path.join(self.root_dir, \"data_verification_Test_hop.csv\")    \n",
+    "        print(\"filenames in use : {} Train, {} Test\".format(csv_file_train,csv_file_test))\n",
     "            \n",
-    "        if not \"data_verification_Train.csv\" in os.listdir(self.root_dir) or not \"data_verification_Test.csv\" in os.listdir(self.root_dir):\n",
+    "        if (not os.path.basename(csv_file_train) in os.listdir(self.root_dir) or (not os.path.basename(csv_file_test) in os.listdir(self.root_dir))):\n",
     "        \n",
     "            train_line_list = []\n",
     "            test_line_list = [] \n",
@@ -61,18 +65,22 @@
     "                for j in range(len(name_images)-1):\n",
     "                    if os.path.isfile(os.path.join(folder_path,name_images[j])):\n",
     "                        anchor_filename = os.path.join(individual,name_images[j])\n",
-    "                        if verbose: print(\"anchor {}\".format(j))\n",
-    "                        if verbose: print(\"anchor filename {}\".format(anchor_filename))\n",
-    "                        positive_index = np.delete(np.arange(0,len(name_images)-1),j)                        \n",
+    "                        if verbose: print(\"anchor {}{}\".format(j,anchor_filename))\n",
+    "                        \n",
+    "                        begin,end = 0, len(name_images)-1\n",
+    "                        if not_hold_out and hold_out_positive:\n",
+    "                            if j < ((len(name_images)-1)*0.8):\n",
+    "                                begin,end = int(0), int(len(name_images)*0.8)-1 \n",
+    "                            else:\n",
+    "                                begin,end = int(len(name_images)*0.8)-1, int(len(name_images))\n",
+    "                            \n",
+    "                        positive_index = np.delete(np.arange(begin,end),np.argwhere(np.arange(begin,end)==j))                        \n",
     "                        if verbose: print(\"positive {}\".format(positive_index))\n",
     "                        \n",
-    "                        negative_index_folder = random.sample(range(0,len(self.ind)-1),len(positive_index))\n",
-    "                        \n",
+    "                        negative_index_folder = random.sample(range(0,len(self.ind)-1),len(positive_index))                        \n",
     "                        if i in negative_index_folder:\n",
-    "                            if i == 0: \n",
-    "                                negative_index_folder[negative_index_folder.index(i)] = i+1\n",
-    "                            else:\n",
-    "                                negative_index_folder[negative_index_folder.index(i)] = i-1\n",
+    "                            if i == 0: negative_index_folder[negative_index_folder.index(i)] = i+1\n",
+    "                            else:negative_index_folder[negative_index_folder.index(i)] = i-1\n",
     "                        if verbose: print(\"negative folders {}\".format(negative_index_folder))\n",
     "                        \n",
     "                        negative_index = []\n",
@@ -82,7 +90,6 @@
     "                                                \n",
     "                        for bid in range(len(positive_index)):                   \n",
     "                            positive_filename = os.path.join(individual,name_images[positive_index[bid]])\n",
-    "\n",
     "                            negative_folder = os.path.join(self.root_dir,self.ind[negative_index_folder[bid]])\n",
     "                            negative_filename = os.path.join(self.ind[negative_index_folder[bid]],os.listdir(negative_folder)[int(negative_index[bid])])\n",
     "                            \n",
@@ -94,13 +101,9 @@
     "                            else: \n",
     "                                split_iter = i\n",
     "                                split_enum = len(self.ind)-1\n",
-    "                                \n",
-    "                            if split_iter < (split_enum*0.8):\n",
-    "                                line = [anchor_filename,positive_filename,negative_filename]\n",
-    "                                train_line_list.append([line])\n",
-    "                            else:\n",
-    "                                line = [anchor_filename,positive_filename,negative_filename]\n",
-    "                                test_line_list.append([line])\n",
+    "                            line = [anchor_filename,positive_filename,negative_filename]\n",
+    "                            if split_iter < (split_enum*0.8):  train_line_list.append([line])\n",
+    "                            else: test_line_list.append([line])\n",
     "\n",
     "            with open(csv_file_train,\"w\") as f:\n",
     "                writer = csv.writer(f,delimiter=',')\n",
@@ -150,11 +153,11 @@
    "source": [
     "#folder = \"/home/rita/JupyterProjects/EYE-SEA/DataSets/Verification/ATeT_faces/orl_faces/\"\n",
     "#dataset_transform = transforms.Compose([\n",
-    "#    transforms.Resize((224,224)),\n",
-    "#    transforms.ToTensor(),        \n",
-    "#    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.247, 0.243, 0.261))\n",
+    "#   transforms.Resize((224,224)),\n",
+    "#   transforms.ToTensor(),        \n",
+    "#   transforms.Normalize((0.4914, 0.4822, 0.4465), (0.247, 0.243, 0.261))\n",
     "#])\n",
-    "#generator = AT_T_TripletGenerator(folder, transform = dataset_transform)\n",
+    "#generator = AT_T_TripletGenerator(folder, transform = dataset_transform,not_hold_out = True, hold_out_positive = True)\n",
     "#\n",
     "#dataloaders = torch.utils.data.DataLoader(generator,batch_size=4, shuffle=True)\n",
     "#inputs = next(iter(dataloaders))"
