--- a/losses.ipynb
+++ b/losses.ipynb
@@ -133,7 +133,7 @@
     "        p_dist =  F.pairwise_distance(a, p, 2)\n",
     "        n_dist = F.pairwise_distance(a,n,2)\n",
     "        Y = p_dist.data.new().resize_as_(p_dist.data).fill_(1)\n",
-    "        loss = self.ranking_loss(p_dist-n_dist+self.ALPHA,)\n",
+    "        loss = self.ranking_loss(p_dist-n_dist+self.ALPHA,Y)\n",
     "        return [loss,p_dist,n_dist]\n",
     "    \n",
     "    def forward(self,a,p,n):\n",
@@ -234,68 +234,115 @@
     "        self.alpha = alpha\n",
     "        self.ranking_loss = nn.SoftMarginLoss()\n",
     "        \n",
-    "    def forward(self,feats,targets):       \n",
-    "        M_intra = self.mean_feats(feats,targets)  \n",
+    "        self.clusters_sum = []\n",
+    "        self.clusters_count = []\n",
+    "        self.clusters_labels = []\n",
     "        \n",
-    "        t_intra,D_intra = self.Euclidean_intra(feats,M_intra,targets)\n",
-    "        t_inter,D_inter = self.Euclidean_inter(M_intra,targets)\n",
+    "    def forward(self,feats,targets):       \n",
+    "       \n",
+    "        t_intra,D_intra = self.Euclidean_intra(feats,targets)\n",
+    "        t_inter,D_inter = self.Euclidean_inter(targets)\n",
     "        \n",
     "        Y = (torch.Tensor(t_intra).data.new().resize_as_(torch.Tensor(t_intra).data).fill_(1))\n",
     "        Y = Y.to(device)\n",
     "        loss = self.ranking_loss((D_intra-D_inter)+self.alpha,Y)\n",
+    "        \n",
     "        return loss\n",
     "        \n",
     "    def mean_feats(self,feats,targets):\n",
     "        N = feats.size(0)\n",
-    " \n",
-    "        self.is_pos = targets.expand(N, N).eq(targets.expand(N, N).t())\n",
-    "        self.is_neg = targets.expand(N, N).ne(targets.expand(N, N).t())\n",
-    "\n",
-    "        #For each identity I need to compute the intra_cluster distance (that )\n",
-    "        clusters_mean = []\n",
-    "        for i in range(N):\n",
-    "            a= feats[self.is_pos[:,i],:]#list of features computed over the same individual\n",
-    "            clusters_mean.append(torch.sum(a,dim=0)/len(a))\n",
     "        \n",
-    "        clusters_mean = torch.stack(clusters_mean)\n",
-    "        clusters_mean = clusters_mean.to(device)\n",
-    "        return clusters_mean\n",
+    "        # shape [N, N]\n",
+    "        is_pos = targets.expand(N, N).eq(targets.expand(N, N).t())\n",
+    "        is_neg = targets.expand(N, N).ne(targets.expand(N, N).t())\n",
+    "        \n",
+    "        target_batch = []\n",
+    "        for i in range(N):\n",
+    "            t = targets[i]\n",
+    "            if not t in target_batch:\n",
+    "                a = feats[is_pos[:,i],:]#list of features computed over the same individual\n",
+    "                sum_a = torch.sum(a,dim=0)              \n",
     "\n",
-    "    def Euclidean_intra(self,feats,M_intra,targets):\n",
-    "        D = losses.euclidean_distance(feats,M_intra)\n",
-    "        #print(D)\n",
-    "        N = feats.size(0)\n",
+    "                if self.clusters_sum:\n",
+    "                    if self.clusters_labels:                       \n",
+    "                        if t in self.clusters_labels:\n",
+    "                            j = self.clusters_labels.index(t.item())\n",
+    "                            self.clusters_sum[j] += sum_a\n",
+    "                            self.clusters_count[j] += a.size(0)\n",
+    "                        else:\n",
+    "                            self.clusters_sum.append(sum_a)\n",
+    "                            self.clusters_labels.append(t)\n",
+    "                            self.clusters_count.append(a.size(0))\n",
+    "                    else: \n",
+    "                        print('There are no labels {}'.format(M_label))\n",
+    "                else:\n",
+    "\n",
+    "                    self.clusters_sum.append(sum_a)\n",
+    "                    self.clusters_labels.append(t.item())\n",
+    "                    self.clusters_count.append(a.size(0))\n",
+    "                target_batch.append(t)\n",
+    "                \n",
+    "    def mean_feats_compute(self):\n",
     "       \n",
+    "        M_emb = [sum_a/len_a for sum_a,len_a in zip(self.clusters_sum,self.clusters_count)]\n",
+    "        self.M_emb = torch.stack(M_emb).to(device)\n",
+    "                \n",
+    "    def Euclidean_intra(self,feats,targets):\n",
+    "        \n",
+    "        M_intra = self.M_emb\n",
+    "        D = losses.euclidean_distance(feats,M_intra)\n",
+    "\n",
+    "        N = feats.size(0)\n",
+    "                       \n",
+    "        is_pos = targets.expand(N, N).eq(targets.expand(N, N).t())\n",
+    "        \n",
     "        target_intra = []\n",
     "        D_intra = []\n",
     "        for i in range(N):          \n",
     "            if not targets[i].item() in target_intra:\n",
-    "                D_id = D[self.is_pos[:,i]]    \n",
+    "                D_id = D[is_pos[:,i],:]            \n",
     "                target_intra.append(targets[i].item())\n",
-    "                D_intra.append(torch.max(D_id))\n",
-    "\n",
+    "                index_mean = self.clusters_labels.index(targets[i].item())\n",
+    "                D_intra.append(torch.max(D_id[:,index_mean]))\n",
+    "        \n",
     "        D_intra = torch.stack(D_intra)\n",
-    "        D_intra.requires_grad_()\n",
+    "        D_intra = D_intra.to(device)\n",
     "        return target_intra, D_intra\n",
     "    \n",
-    "    def Euclidean_inter(self,M_intra,targets):\n",
-    "        N = M_intra.size(0)\n",
-    "                \n",
+    "    def Euclidean_inter(self,targets):\n",
+    "        M_intra = self.M_emb\n",
+    "        N = targets.size(0)\n",
+    "        is_neg = targets.expand(N, N).ne(targets.expand(N, N).t())\n",
     "        target_inter = []\n",
-    "        D_inter = []\n",
+    "        D_inter= []\n",
     "        for i in range(N):\n",
     "            if not targets[i].item() in target_inter:\n",
-    "                M = M_intra[self.is_neg[:,i]]  \n",
-    "                target_inter.append(targets[i])\n",
-    "                for j in range(len(M)):\n",
-    "                    X = (M[j,:])\n",
-    "                    Y = (M_intra[i,:])\n",
-    "                    list_inter = losses.euclidean_distance(X.unsqueeze(1),Y.unsqueeze(1))\n",
-    "                D_inter.append(torch.min(list_inter))\n",
+    "                index_mean = self.clusters_labels.index(targets[i].item())\n",
+    "                M = M_intra[index_mean,:]  \n",
+    "                target_inter.append(targets[i].item())  \n",
+    "                list_inter = []\n",
+    "                for j in range(len(M_intra)):\n",
+    "                    if not j == index_mean:\n",
+    "                        X = (M_intra[j,:])\n",
+    "                        list_inter.append(torch.pairwise_distance(M.unsqueeze(1),X.unsqueeze(1),2))\n",
+    "                D_inter.append(torch.min(torch.stack(list_inter)))\n",
+    "\n",
+    "        \n",
     "        D_inter = torch.Tensor(D_inter)\n",
     "        D_inter = D_inter.to(device)\n",
     "        D_inter.requires_grad_()\n",
-    "        return target_inter, D_inter"
+    "        return target_inter, D_inter\n",
+    "    \n",
+    "    def classification(self, feats):\n",
+    "        M_intra = self.M_emb\n",
+    "        D = losses.euclidean_distance(feats,M_intra)\n",
+    "        \n",
+    "        N = feats.size(0)\n",
+    "        classification = []\n",
+    "        for j in range(N):\n",
+    "            classification.append(D[j,:].index(torch.min(D[j,:])))\n",
+    "            \n",
+    "        return classification"
    ]
   }
  ],
