--- a/MiniBatch_generator.ipynb
+++ b/MiniBatch_generator.ipynb
@@ -28,16 +28,19 @@
    "outputs": [],
    "source": [
     "class mini_batch(torch.nn.Module):\n",
-    "    def __init__(self, dat_folder,transform):\n",
+    "    def __init__(self, dat_folder,transform,percent):\n",
     "        super(mini_batch, self).__init__()\n",
     "        self.root_dir = os.path.dirname(dat_folder) \n",
     "        self.transform = transform\n",
+    "        self.percent = percent\n",
     "\n",
     "        #list of folders \n",
     "        ind = [individual for individual in os.listdir(self.root_dir) if os.path.isdir(os.path.join(self.root_dir,individual))]\n",
     "        self.ind_Train =  ind[0:int(len(ind)*0.8)] \n",
     "        self.ind_Test = ind[int(len(ind)*0.8):-1] \n",
     "        \n",
+    "        self.num_ind_train = [len(os.listdir(os.path.join(self.root_dir,i))) for i in self.ind_Train if len(os.listdir(os.path.join(self.root_dir,i)))>3]\n",
+    "        self.num_ind_test = [len(os.listdir(os.path.join(self.root_dir,i))) for i in self.ind_Test if len(os.listdir(os.path.join(self.root_dir,i)))>3]\n",
     "        \n",
     "    def loadfile(self, data_file):\n",
     "        image = io.imread(data_file)\n",
@@ -51,38 +54,45 @@
     "        train_line_list = []\n",
     "        labels = []\n",
     "\n",
+    "        min_numinf = min(self.num_ind_train)*self.percent\n",
     "        for i,individual in enumerate(self.ind_Train):\n",
     "            folder_path = os.path.join(self.root_dir,individual)\n",
     "            name_images = [name for name in os.listdir(folder_path)]  \n",
-    "\n",
-    "            random.shuffle(name_images)\n",
+    " \n",
     "            N = len(name_images)\n",
+    "            if N>3:\n",
+    "            \n",
+    "                random.shuffle(name_images)\n",
     "\n",
-    "            for j in range(int(N/3)):\n",
-    "                if os.path.isfile(os.path.join(folder_path,name_images[j])):\n",
-    "                    image_filename = os.path.join(individual,name_images[j])\n",
-    "                    if verbose: print(\"image {}{}\".format(j,image_filename))\n",
-    "                    train_line_list.append(image_filename)\n",
-    "                    labels.append(i)\n",
+    "\n",
+    "                for j in range(int(min_numinf)):               \n",
+    "                    if os.path.isfile(os.path.join(folder_path,name_images[j])):\n",
+    "                        image_filename = os.path.join(individual,name_images[j])\n",
+    "                        if verbose: print(\"image {}{}\".format(j,image_filename))\n",
+    "                        train_line_list.append(image_filename)\n",
+    "                        labels.append(i)\n",
+    "\n",
     "\n",
     "        image = [self.transform(Image.fromarray(self.loadfile(os.path.join(self.root_dir,train_line_list[i])))) for i in range(len(train_line_list))]                    \n",
     "        return image,labels\n",
     "    \n",
     "    def prepare_batch_test(self):\n",
-    "        train_line_list = []\n",
+    "        test_line_list = []\n",
     "        labels = []\n",
-    "        \n",
+    "        min_numinf = min(self.num_ind_test)\n",
     "        for i,individual in enumerate(self.ind_Test):\n",
     "            folder_path = os.path.join(self.root_dir,individual)\n",
     "            name_images = [name for name in os.listdir(folder_path)]\n",
     "            N = len(name_images)\n",
     "\n",
-    "            for j in range(int(N)):\n",
-    "                if os.path.isfile(os.path.join(folder_path,name_images[j])):\n",
-    "                    image_filename = os.path.join(individual,name_images[j])\n",
-    "                    if verbose: print(\"image {}{}\".format(j,image_filename))\n",
-    "                    test_line_list.append(image_filename)\n",
-    "                    labels.append(i)\n",
+    "            if N>3:\n",
+    "                \n",
+    "                for j in range(int(min_numinf)):\n",
+    "                    if os.path.isfile(os.path.join(folder_path,name_images[j])):\n",
+    "                        image_filename = os.path.join(individual,name_images[j])\n",
+    "                        if verbose: print(\"image {}{}\".format(j,image_filename))\n",
+    "                        test_line_list.append(image_filename)\n",
+    "                        labels.append(i)\n",
     "\n",
     "        image = [self.transform(Image.fromarray(self.loadfile(os.path.join(self.root_dir,test_line_list[i])))) for i in range(len(test_line_list))]                    \n",
     "        return image,labels          \n",
