--- a/losses.ipynb
+++ b/losses.ipynb
@@ -206,7 +206,7 @@
     "    #\"feats embedding immagine\"        \n",
     "        # All pairwise distances\n",
     "        D = euclidean_distance(feats,feats)\n",
-    "\n",
+    "        print(D.size())\n",
     "        # Compute hard aware point to set distances..\n",
     "        d_ap, d_an = hard_aware_point_2_set_mining(D, targets, self.weighting, self.coeff)\n",
     "        d_ap.requires_grad_()\n",
