--- a/losses.ipynb
+++ b/losses.ipynb
@@ -44,6 +44,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def find_threshold(var,percentile):\n",
+    "    hist, bin_edges = np.histogram(var,100)\n",
+    "    cdf = np.float32(np.cumsum(hist))/np.sum(hist)\n",
+    "    bin_centers = (bin_edges[:-1]+bin_edges[1:])/2\n",
+    "    threshold = np.interp(percentile*0.01, cdf, bin_centers)    \n",
+    "    return threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class SpreadLoss(nn.Module):\n",
     "    def __init__(self, num_classes, m=0.5):\n",
     "        super(SpreadLoss, self).__init__()\n",
