--- a/Pair_file_generator.ipynb
+++ b/Pair_file_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,12 +122,14 @@
     "        images_x_fold = args.images_x_fold\n",
     "    random.shuffle(match_list)\n",
     "    random.shuffle(mismatch_list)\n",
-    "    for i in range(args.folds):\n",
-    "        print(\"Fold {}\".format(i))\n",
-    "        initial_index = images_x_fold * i\n",
-    "        print(\"initial position {} final position {}\".format(initial_index,initial_index+images_x_fold))\n",
-    "        with open(pair_file_path,\"w\") as f:\n",
-    "            writer = csv.writer(f,delimiter=',')   \n",
+    "    with open(pair_file_path,\"w\") as f:\n",
+    "        writer = csv.writer(f,delimiter=',') \n",
+    "    \n",
+    "        for i in range(args.folds):\n",
+    "            print(\"Fold {}\".format(i))\n",
+    "            initial_index = images_x_fold * i\n",
+    "            print(\"initial position {} final position {}\".format(initial_index,initial_index+images_x_fold))\n",
+    "\n",
     "            for match_line in itertools.islice(match_list,initial_index,initial_index+images_x_fold):\n",
     "                if verbose: print(match_line)\n",
     "                writer.writerows([match_line])\n",
@@ -139,16 +141,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing 1*100 individuals\n",
+      "Computing 2*100 individuals\n",
+      "Computing 3*100 individuals\n",
+      "Computing 4*100 individuals\n",
+      "Computing 5*100 individuals\n",
+      "Computing 6*100 individuals\n",
+      "Computing 7*100 individuals\n",
+      "Computing 8*100 individuals\n",
+      "Computing 9*100 individuals\n",
+      "Computing 10*100 individuals\n",
+      "Computing 11*100 individuals\n",
+      "Computing 12*100 individuals\n",
+      "Computing 13*100 individuals\n",
+      "Computing 14*100 individuals\n",
+      "Computing 15*100 individuals\n",
+      "Computing 16*100 individuals\n",
+      "Computing 17*100 individuals\n",
+      "Computing 18*100 individuals\n",
+      "Computing 19*100 individuals\n",
+      "Computing 20*100 individuals\n",
+      "Computing 21*100 individuals\n",
+      "93943\n",
+      "93943\n",
+      "Fold 0\n",
+      "initial position 0 final position 300\n",
+      "Fold 1\n",
+      "initial position 300 final position 600\n",
+      "Fold 2\n",
+      "initial position 600 final position 900\n",
+      "Fold 3\n",
+      "initial position 900 final position 1200\n",
+      "Fold 4\n",
+      "initial position 1200 final position 1500\n",
+      "Fold 5\n",
+      "initial position 1500 final position 1800\n",
+      "Fold 6\n",
+      "initial position 1800 final position 2100\n",
+      "Fold 7\n",
+      "initial position 2100 final position 2400\n",
+      "Fold 8\n",
+      "initial position 2400 final position 2700\n",
+      "Fold 9\n",
+      "initial position 2700 final position 3000\n"
+     ]
+    }
+   ],
    "source": [
     "args = easydict.EasyDict({\n",
     "    \"root\":\"/home/rita/JupyterProjects/EYE-SEA/DataSets/Verification\",\n",
     "    \"file_name\":\"pairs.txt\",\n",
-    "    \"dataset_name\":\"lfw\", #\"chimpanzee_faces-master/datasets_cropped_chimpanzee_faces/data_CZoo\",\n",
+    "    \"dataset_name\":\"chimpanzee_faces-master/datasets_cropped_chimpanzee_faces/data_CZoo\",#\"ATeT_faces/orl_faces\",#\"lfw\", \n",
     "    \"annotation_file\":\"annotations_czoo.txt\",\n",
-    "    \"dataset_modality\":\"folder\",\n",
+    "    \"dataset_modality\":\"file\",\n",
     "    \"folds\":10,\n",
     "    \"images_x_fold\":300,\n",
     "    \"gpus\":0       \n",
